# ocr_platform_investigation

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  SCHEMA_GUIDE.md  claude.md  docker-compose.yml  render.yaml  test_ocr.py
backend/: auth.py  cli.py  config.py  dependencies.py  extraction_methods.py  limiter.py  main.py  paths.py  pyproject.toml  requirements-test.txt  requirements.txt
backend/benchmarks/: __init__.py  _helpers.py  ablation_benchmark.py  datasets.py  datasets_extended.py  exporter.py  prompt_optimizer_benchmark.py  runner.py  scoring.py
backend/config/: providers.yaml
backend/database/: crud.py  migrations.py  pool.py  schema.sql  validators.py
backend/database/crud/: __init__.py  _shared.py  benchmarks.py  jobs.py  queue.py  schemas.py  users.py
backend/models/: providers.py  schemas.py
backend/routers/: analytics.py  auth.py  benchmarks.py  extract_settings.py  job_serialization.py  jobs.py  processing.py  providers.py  quality.py  schemas.py  shared.py  text_processing.py  upload.py  websocket.py
backend/scripts/: __init__.py  batch_test_parsing.py  test_document_classifier.py  test_schema_parsing.py  test_upload.py
backend/services/: chunking_service.py  docling_service.py  document_classifier.py  gemini.py  hybrid_processing.py  image_preprocessor.py  image_service.py  job_queue.py  litellm_provider.py  nebius.py  openrouter.py  paddle_ocr_service.py  pricing.py  processing.py  processing_utils.py  prompt_learning.py  prompt_optimizer.py  prompt_templates.py  provider_catalog.py  provider_utils.py  quality_gate.py  schema_service.py  schema_suggester.py  text_extraction.py  transcription_service.py  vlm_provider.py
backend/services/processors/: base.py  docling_extract.py  docling_parse.py  factory.py  hybrid.py  text.py  transcription.py  vision.py
backend/tests/: MANUAL_TESTING_CHECKLIST.md  __init__.py  conftest.py  test_benchmarks.py  test_e2e_phase1.py  test_e2e_phase1_simple.py  test_fix_result_parsing.py  test_guest_access.py  test_image_service.py  test_integration.py  test_limits.py  test_phase23_features.py  test_public_routes.py  test_quality_gate.py  test_schema_service.py
backend/tests/e2e/: test_e2e_phase1.py  test_e2e_phase1_simple.py
backend/tests/fixtures/: benchmark_fixtures.py  generate_fixtures.py  sample.docx  sample.pptx
backend/tests/integration/: conftest.py  test_benchmark_crud.py  test_benchmark_runner.py  test_extraction_methods.py  test_guest_access.py  test_integration.py  test_job_queue.py  test_phase23_features.py  test_scoring.py  test_security_hardening.py  test_websocket_flow.py
backend/tests/services/: conftest.py  test_chunking_service.py  test_docling_service.py  test_processing_docling_integration.py  test_transcription_service.py
(+158 files in other folders)
