[project]
name = "ocr-platform-backend"
version = "1.0.0"
description = "OCR Platform Backend - FastAPI application for document processing"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.10.0",
    "pydantic-settings==2.6.0",
    "httpx==0.28.0",
    "aiosqlite==0.20.0",
    "python-multipart==0.0.12",
    "python-dotenv==1.0.1",
    "pdf2image==1.17.0",
    "pillow==11.0.0",
    "jsonschema>=4.26.0",
    "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    ".",
    "database",
    "models",
    "routers",
    "services",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
