[project]
name = "ocr-platform-backend"
version = "1.0.0"
description = "OCR Platform Backend - FastAPI application for document processing"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic>=2.13.0,<3.0.0",
    "pydantic-settings==2.6.0",
    "httpx==0.28.0",
    "aiosqlite==0.20.0",
    "python-multipart==0.0.12",
    "python-dotenv==1.0.1",
    "pdf2image==1.17.0",
    "pillow==11.0.0",
    "jsonschema>=4.26.0",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.26.7",
    # Authentication
    "pyjwt>=2.9.0",
    "passlib>=1.7.4",
    "argon2-cffi>=23.1.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # CLI utilities
    "tabulate>=0.9.0",
    # Note: PaddlePaddle/PaddleOCR temporarily removed due to ARM64 compatibility issues
    # These will be re-added in Phase 2 when hybrid pipeline is implemented
    # "paddlepaddle>=3.3.0",
    # "paddleocr>=3.3.3",
    "huggingface-hub>=1.9.0",
    # Image quality assessment and preprocessing
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    # Document processing and LLM utilities
    "docling>=2.89.0,<3.0.0",
    "tiktoken>=0.12.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    ".",
    "database",
    "models",
    "routers",
    "services",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-p no:warnings"
